macviews: hide accelerators in context menus

This change:
1) Moves the logic for showing accelerator text into MenuConfig
2) Adds a MenuConfig variable for whether to show accelerator text in
   context menus

Bug: 843703
Change-Id: Iedcef2ba4cdfc2a5390ddc0c9889af339625938d
Reviewed-on: https://chromium-review.googlesource.com/1069035
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560681}
Former-commit-id: 43dce2b6afdd186d7f6a06a0561271958cf94a21